шаблон со структурой

--- a/index.html
+++ b/index.html
@@ -6,8 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
+    <link rel="stylesheet" href="./styles/global.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
+
+  <img class="pixel-perfect-image"
+  src="https://code.s3.yandex.net/web-code/images/00-zero/pixel-perfect/design.png" alt="пиксел перфект">
+
   <body>
     <header class="header"> 
       <section class="header_menu">
@@ -16,20 +21,31 @@
         <a class="header_menu_about_auction" href="#0">Об аукционе</a>
       </section>
       <section class="header_logo"></section>
-      <section class="header_contact"></section>
+      <section class="header_contact">
+        <p class="discription_text">
+          <span class="discription_text_phone_number">+9 999 555 5555</span>
+          <span class="discription_text_mail">info@sobaka.ge</span>
+          <span class="discription_text_adress">наб. Принсенграхт 263- 265, Амстердам</span>
+        </p>
+      </section>
     </header>
 
     <main>
      <section class="cover">
-        <section class="title">
-          <span class="accent-span">ОНО</span>
+        <h1 class="title">
+          <span class="accent-start">ОНО</span>
           <span class="accent-center">ТЕБЕ</span>
           <span class="accent-right">НАДО</span>
+        </h1>
+        <section class="discription">
+          <p class="discription_text">
+            Аукцион вещей, в которые никто не верил
+          </p>
+          <button class="auction-button" type="button">
+            Сделать ставку</button>
         </section>
-        <section class="discription"></section>
-        <section class="overlay"></section>
-        
-      </section>
+        <section class="overlay"></section>    
+     </section>
      
       <section class="lots">
         <section class="frame1"><img src="C:/Users/79122/Desktop/Ekaterina_D/first-project/ono-tebe-nado-fd/images/card-lot-01.jpg">          
