--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
     <header class="header"> 
       <nav class="menu header_menu">
         <ul class="header menu_list">
-          <li class="header_link_active no_bullit"><a class="without_underscores" href="#0">главная</a></li>
-          <li class="header_link_active"><a href="#0">посмотреть лоты</a></li>
-          <li class="header_link_active"><a href="#0">об аукционе</a></li>
+          <li class="no_bullit"><a class="without_underscores" href="#0">главная</a></li>
+          <li><a href="#0">посмотреть лоты</a></li>
+          <li><a href="#0">об аукционе</a></li>
         </ul>
       </nav>
-      <a class="header_logo"></a>
+      <a class="logo"></a>
       <address class="contact header_contact">
         <a class="description_text" href="tel:+99995555555">+9 999 555 5555</a><br>
         <a class="description_text" href="mailto:info@sobaka.ge">info@sobaka.ge</a><br>
@@ -82,20 +82,18 @@
       </section>        
       <section class="about">
         <div class="logo_column">
-          <div class="image_logo"></div>
-          <div class="other_color"></div>
+          <div class="logo other"></div>          
         </div>
         <div class="about_column">
           <h2 class="head_column">об аукционе</h2>
-          <p class="column_text_start">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?
-          </p>
-          <p class="column_text_end">Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+          <p class="column_text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?<br>
+          Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+          на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
           </p>
         </div>
       </section>
+    </main>
 
-     </main>
     <footer class="footer">
       <address class="contact footer_contact">
         <a class="description_text" href="tel:+99995555555">+9 999 555 5555</a><br>
@@ -105,9 +103,9 @@
       </address>
       <nav class="menu footer_menu">
         <ul class="footer menu_list">
-          <li class="footer_link_active no_bullit"><a class="without_underscores" href="#0">главная</a></li>
-          <li class="footer_link_active no_bullit"><a href="#0">посмотреть лоты</a></li>
-          <li class="footer_link_active no_bullit"><a href="#0">об аукционе</a></li>
+          <li class="link_active no_bullit"><a class="without_underscores" href="#0">главная</a></li>
+          <li class="no_bullit"><a href="#0">посмотреть лоты</a></li>
+          <li class="no_bullit"><a href="#0">об аукционе</a></li>
         </ul>
       </nav>      
       
