--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           
       <section class="lots">
         <h2 class="lots_heading">лоты</h2>
-        <ol class="lots_card-list-item">
+        <ol class="lots_card-list">
           <li class="primary_lots_film card">
             <a href="#0" class="primary_lots_card_content without_underscores">
               <h3 class="introduction_lot">Фильм режиссёра, который бросил киношколу</h3>
@@ -86,10 +86,12 @@
         </div>
         <div class="about_column">
           <h2 class="head_column">об аукционе</h2>
-          <p class="column_text">Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?<br>
-          Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
-          на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
-          </p>
+          <div class="column_text">
+            <p>Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. Наши лоты вообще не должны были попасть ни на один аукцион. Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? Кому нужны все эти странные вещи, созданные любителями?</p>
+            <p>Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+            на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми.
+            </p>
+          </div>  
         </div>
       </section>
     </main>
